--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     
   <h1>Hello World</h1>
+    <h2>Today is Monday 2/18</p>
     <script>
         // register the service worker for offline use
         if('serviceWorker' in navigator) {
